--- a/src/header.html
+++ b/src/header.html
@@ -35,7 +35,7 @@
    <header>
     <div class="m-container">
       <nav class="d-flex align-items-center justify-content-between">
-        <a href="index.html"><img src="img/logo.svg" alt=""></a>
+        <a class="logo-main" href="index.html"><img src="img/logo.svg" alt=""></a>
         <div id="menu">
           <ul class="social-bar d-flex align-items-center">
             <li>
