--- a/src/footer.html
+++ b/src/footer.html
@@ -90,7 +90,7 @@
 
         <ul class="footer-item-links">
           <li><a href="about.html">Şirkət Haqqında</a></li>
-          <li><a href="#">Uğurlar / Sertifikatlar</a></li>
+          <li><a href="certificates.html">Uğurlar / Sertifikatlar</a></li>
           <li><a href="company-head.html">Şirkət Rəhbərinin Müraciəti</a></li>
           <li><a href="big-master.html">Böyük Usta</a></li>
         </ul>
