sertifikatlar daxili sehife hazirdir

--- a/src/certificates.html
+++ b/src/certificates.html
@@ -19,9 +19,11 @@
     <h3>Uğurlar / Sertifikatlar</h3>
     <div class="owl-carousel owl-theme">
       <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
+      <div class="item">
+        <a href="company-head.html">Şirkət Rəhbərinin Müraciəti</a>
+      </div>
+      <div class="item"><a href="big-master.html">Böyük Usta</a></div>
+      <div class="item"><a href="about.html">Şirkət Haqqında</a></div>
     </div>
     <div class="certificate-items">
       <div class="certificate-item">
@@ -29,7 +31,7 @@
           <img src="img/certificate.jpg" alt="" />
         </div>
         <h4 class="title">Uğurlar</h4>
-        <a class="seemore" href="#"
+        <a class="seemore" href="certificates-internal.html"
           >see more <img src="img/arrow-right.png" alt="" />
         </a>
       </div>
@@ -38,16 +40,7 @@
           <img src="img/certificate.jpg" alt="" />
         </div>
         <h4 class="title">Uğurlar</h4>
-        <a class="seemore" href="#"
-          >see more <img src="img/arrow-right.png" alt="" />
-        </a>
-      </div>
-      <div class="certificate-item">
-        <div class="certificate-img">
-          <img src="img/certificate.jpg" alt="" />
-        </div>
-        <h4 class="title">Uğurlar</h4>
-        <a class="seemore" href="#"
+        <a class="seemore" href="certificates-internal.html"
           >see more <img src="img/arrow-right.png" alt="" />
         </a>
       </div>
