--- a/src/footer.html
+++ b/src/footer.html
@@ -135,6 +135,7 @@ crossorigin="anonymous"
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjx4YG7E7thIRo6L6wnhcATgWXf8ldHOc&callback=initMap">
 </script>
+<script src="js/jquery.fancybox.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/image_zoom.js"></script>
 <script src="js/app.min.js"></script>
