--- a/src/header.html
+++ b/src/header.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
       href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
     <link href="css/image_zoom.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
