--- a/src/certificates-internal.html
+++ b/src/certificates-internal.html
@@ -27,7 +27,7 @@
       <div class="item">
         <div class="item-img">
           <a href="img/certificate3x.jpg" data-fancybox="images">
-            <img src="img/certificate.jpg" alt="" />
+            <img src="img/certificate3x.jpg" alt="" />
           </a>
         </div>
         <div class="zoom-btn">
@@ -37,7 +37,7 @@
       <div class="item">
         <div class="item-img">
           <a href="img/certificate2x3.jpg" data-fancybox="images">
-            <img src="img/certificate2.jpg" alt="" />
+            <img src="img/certificate2x3.jpg" alt="" />
           </a>
         </div>
         <div class="zoom-btn">
@@ -47,7 +47,7 @@
       <div class="item">
         <div class="item-img">
           <a href="img/certificate3x3.jpg" data-fancybox="images">
-            <img src="img/certificate3.jpg" alt="" />
+            <img src="img/certificate3x3.jpg" alt="" />
           </a>
         </div>
         <div class="zoom-btn">
@@ -57,7 +57,7 @@
       <div class="item">
         <div class="item-img">
           <a href="img/certificate3x3.jpg" data-fancybox="images">
-            <img src="img/certificate3.jpg" alt="" />
+            <img src="img/certificate3x3.jpg" alt="" />
           </a>
         </div>
         <div class="zoom-btn">
