geri zeng modulu

--- a/src/certificates-internal.html
+++ b/src/certificates-internal.html
@@ -36,7 +36,7 @@
       </div>
       <div class="item">
         <div class="item-img">
-          <a href="img/certificate2x3.jpg" data-fancybox="images">
+          <a href="img/certificate2.jpg" data-fancybox="images">
             <img src="img/certificate2.jpg" alt="" />
           </a>
         </div>
