--- a/src/footer.html
+++ b/src/footer.html
@@ -43,7 +43,7 @@
         <ul class="footer-item-links">
           <li><a href="#">Tərəfdaş ol</a></li>
           <li><a href="#">İnvestorlara</a></li>
-          <li><a href="#">Tərəfdaşlar</a></li>
+          <li><a href="partners.html">Tərəfdaşlar</a></li>
           <li><a href="#">Yer Təklif et</a></li>
           <li><a href="#">Beynəlxalq Əlaqələr</a></li>
           <li><a href="#">Bütün</a></li>
