--- a/src/footer.html
+++ b/src/footer.html
@@ -98,8 +98,8 @@
       <div class="footer-item">
         <div class="footer-item-title">Media Mərkəzi</div>
         <ul class="footer-item-links pnb">
-          <li><a href="#">Xəbərlər</a></li>
-          <li><a href="#">KİV üçün</a></li>
+          <li><a href="news.html">Xəbərlər</a></li>
+          <li><a href="mass-media-1.html">KİV üçün</a></li>
         </ul>
       </div>
       <div class="footer-item">
