--- a/src/partners.html
+++ b/src/partners.html
@@ -25,30 +25,52 @@
       <div class="item"><a href="#">Beynəlxalq Əlaqələr</a></div>
       <div class="item"><a href="#">Bütün</a></div>
     </div>
-    <div class="partner-items">
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+    <div class="row margin-0">
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img
+            src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png"
+            alt=""
+          />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img src="img/bmw.png" alt="" />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img src="img/bugatti.png" alt="" />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img src="img/bentley.png" alt="" />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img
+            src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png"
+            alt=""
+          />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img src="img/bmw.png" alt="" />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img src="img/bugatti.png" alt="" />
+        </div>
       </div>
-      <div class="partner-item">
-        <img src="img/audi-logo-ed-84-dfe-2-e-3-seeklogo-com-copy.png" alt="" />
+      <div class="col-md-3 col-sm-4 col-6 pl-0">
+        <div class="partner-item">
+          <img src="img/bentley.png" alt="" />
+        </div>
       </div>
     </div>
   </div>
