--- a/src/planning.html
+++ b/src/planning.html
@@ -11,7 +11,7 @@
       </li>
       <li class="breadcrumbs_item">
         <a class="brdcrmb-active" href="#">
-          <span class="breadcrumbs_text">Usta xidməti</span>
+          <span class="breadcrumbs_text">Planlama xidməti</span>
         </a>
       </li>
     </ul>
@@ -20,7 +20,7 @@
 
   <div class="big-section">
     <div class="new-container">
-      <h3>Usta xidməti</h3>
+      <h3>Planlama xidməti</h3>
       <div class="owl-carousel owl-theme">
         <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
         <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
@@ -36,34 +36,41 @@
         münasibətimiz xoş təəssüratlarla dolu olsun.
       </div>
       <div class="second-main">
-        <h3 class="main-heading">Mebellərinizi təmirini bizə həvalə
-          etməyin 4 üstünlüyü</h3>
+        <h3 class="main-heading">Mebel planlama xidmətinin üstünlükləri</h3>
         <div>
-          <h4 class="experience"> <i class="fa fa-check"></i> Təcrübə</h4>
+          <h4 class="experience"> <i class="fa fa-check"></i> Risklərdən sığortalanın</h4>
           <div class="panel-body">
-            Bu işdə ixtisaslaşmaq və Sizə keyfiyyətli xidmət göstərmək üçün uzun
-            yol qət etməklə yanaşı böyük təcrübə toplamışıq.
+            Planlama və ölçmə xidmətindən ödənişsiz olaraq istifadə etməklə mebelin sifarişi və
+çatdırılması zamanı baş verə biləcək risklərdən sığortalanın. Biz istəmirik ki, əldə
+etdiyiniz mebellər ünvanınıza çatdırıldıqdan sonra hər hansı bir uyğunsuzluqla
+üzləşəsiniz. İşinizi planlı tutun, planlamanı biz hazırlayarıq.
           </div>
         </div>
         <div>
-          <h4 class="experience"><i class="fa fa-check"></i>Peşəkarlıq</h4>
+          <h4 class="experience"><i class="fa fa-check"></i>Vaxtınıza qənaət edin</h4>
           <div class="panel-body">
-            Bu işdə ixtisaslaşmaq və Sizə keyfiyyətli xidmət göstərmək üçün uzun
-            yol qət etməklə yanaşı böyük təcrübə toplamışıq.
+            Mebel salonlarını gəzmək Sizi yormasın deyə, planlama üzrə mütəxəssislərimiz Sizin
+məkanınıza gələcək. Bu xidmətdən faydalanaraq həm məkanınızda mebellərin doğru
+planlaması üzrə konsultasiya ala, həm də geniş çeşidli mebellərimizin elektron
+versiyası ilə tanış ola bilərsiniz.
           </div>
         </div>
         <div>
-          <h4 class="experience"><i class="fa fa-check"></i>Keyfiyyət</h4>
+          <h4 class="experience"><i class="fa fa-check"></i>Seçiminiz geniş olsun</h4>
           <div class="panel-body">
-            Bu işdə ixtisaslaşmaq və Sizə keyfiyyətli xidmət göstərmək üçün uzun
-            yol qət etməklə yanaşı böyük təcrübə toplamışıq.
+            Kənardan baxış hər zaman gözəldir. Məkanınızda mebellərin yerləşdirilməsi zamanı
+Sizə təklif edəcəyimiz həll yolları Sizi təəccübləndirəcək. Əməkdaşlarımız sayəsində
+həm doğru seçim edə biləcək, həm də maariflənəcəksiniz. Siz mebel seçiminizi edin,
+onun məkan üzrə planlamasını isə biz təşkil edək.
           </div>
         </div>
         <div>
-          <h4 class="experience"><i class="fa fa-check"></i>İmic</h4>
+          <h4 class="experience"><i class="fa fa-check"></i>Yenililikləri kəşf edin</h4>
           <div class="panel-body">
-            Bu işdə ixtisaslaşmaq və Sizə keyfiyyətli xidmət göstərmək üçün uzun
-            yol qət etməklə yanaşı böyük təcrübə toplamışıq.
+            Planlama xidməti çərçivəsində təklif olunan həll yolları Sizə yeni və unikal mebel
+modelləri seçməyə imkan yaradacaq. Bu fürsəti dəyərləndirərək həm məkanınızda
+yeniliklər edin, həm də geniş çeşidli mebellər ilə tanış olun. Məqsədimiz evinizə
+mebel aləminin yeniliklərini gətirməkdir.
           </div>
         </div>
       </div>
