--- a/src/footer.html
+++ b/src/footer.html
@@ -16,11 +16,11 @@
       <div class="footer-item">
         <div class="footer-item-title">Xidmətlər</div>
         <ul class="footer-item-links">
-          <li><a href="#">Usta xidməti</a></li>
-          <li><a href="#">Özəl sifarişlər</a></li>
-          <li><a href="#">Özəl layihələr</a></li>
-          <li><a href="#">Konsultasiya xidməti</a></li>
-          <li><a href="#">Planlama xidməti</a></li>
+          <li><a href="master-service.html">Usta xidməti</a></li>
+          <li><a href="special-orders.html">Özəl sifarişlər</a></li>
+          <li><a href="projects.html">Özəl layihələr</a></li>
+          <li><a href="consultation.html">Konsultasiya xidməti</a></li>
+          <li><a href="planning.html">Planlama xidməti</a></li>
         </ul>
       </div>
       <div class="footer-item">
