--- a/src/header.html
+++ b/src/header.html
@@ -122,7 +122,7 @@
             <a href="#"><img src="img/heart.svg" alt=""></i></a>
           </li>
           <li>
-            <a href="#"><img src="img/cart.svg" alt=""></a>
+            <a href="cart.html"><img src="img/cart.svg" alt=""></a>
           </li>
         </ul>
         <button id="toggle-button">
