--- a/src/suggestion.html
+++ b/src/suggestion.html
@@ -27,22 +27,32 @@
       <div class="item"><a href="#">Şirkət Haqqında</a></div>
     </div>
     <div class="panel-body">
-      Mebel seçimi ciddi araşdırma və diqqət tələb edir. İlk baxışdan bu seçim prosesi asan görünsə də, burada bir çox
-      məqamları diqqətə almaq lazımdır. Seçdiyiniz mebel məkanın interyer və ya eksteryerinə uyğun olmaqla yanaşı,
-      rahatlığı ilə də diqqət çəkməlidir. Bütün bu və digər kriteriyalar üzrə mebellərin seçimi üçün Qardaşlar
-      mebel şirkətinin ödənişsiz konsultasiya xidmətindən
-      istifadə edə bilərsiniz:
+      Mebel seçimi ciddi araşdırma və diqqət tələb edir. İlk baxışdan bu seçim
+      prosesi asan görünsə də, burada bir çox məqamları diqqətə almaq lazımdır.
+      Seçdiyiniz mebel məkanın interyer və ya eksteryerinə uyğun olmaqla yanaşı,
+      rahatlığı ilə də diqqət çəkməlidir. Bütün bu və digər kriteriyalar üzrə
+      mebellərin seçimi üçün Qardaşlar mebel şirkətinin ödənişsiz konsultasiya
+      xidmətindən istifadə edə bilərsiniz:
     </div>
     <h3 class="main-heading suggest-head">Yeri təklifi anketi</h3>
     <div class="suggest-form">
       <form action="#" method="POST">
-        <input type="text" class="common-input" placeholder="Name, Surname">
-        <input type="text" class="common-input" placeholder="E-mail">
-        <input type="text" class="common-input" placeholder="Phone number">
-        <input type="text" class="common-input" placeholder="Address">
+        <input type="text" class="common-input" placeholder="Name, Surname" />
+        <input type="text" class="common-input" placeholder="E-mail" />
+        <input type="text" class="common-input" placeholder="Phone number" />
+        <input type="text" class="common-input" placeholder="Address" />
         <div class="twin-input">
-          <input type="text" class="common-input" placeholder="Yerin sahəsi m">
-          <select class="common-input" name="" id="" aria-placeholder="Mərtəbə sayı">
+          <input
+            type="text"
+            class="common-input"
+            placeholder="Yerin sahəsi m"
+          />
+          <select
+            class="common-input"
+            name=""
+            id=""
+            aria-placeholder="Mərtəbə sayı"
+          >
             <option value="" selected disabled>Mərtəbə sayı</option>
             <option value="">1</option>
             <option value="">2</option>
@@ -95,36 +105,47 @@
             </div>
           </div>
         </div>
-        <textarea class="common-textarea suggest-textarea" name="" id="" cols="30" rows="10"
-          placeholder="Açıqlama"></textarea>
+        <textarea
+          class="common-textarea suggest-textarea"
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Açıqlama"
+        ></textarea>
         <span class="suggest-text">Şəkilləri zip faylında əlavə edin</span>
         <div class="downloaded-files">
-          <div class="downloaded-file">Name1.zip <a href="javascript: void(0)"><i class="fa fa-times"></i> </a></div>
-          <div class="downloaded-file">Name2.zip <a href="javascript: void(0)"><i class="fa fa-times"></i> </a></div>
+          <div class="downloaded-file">
+            Name1.zip
+            <a href="javascript: void(0)"><i class="fa fa-times"></i> </a>
+          </div>
+          <div class="downloaded-file">
+            Name2.zip
+            <a href="javascript: void(0)"><i class="fa fa-times"></i> </a>
+          </div>
         </div>
         <div class="upload-input-div">
-          <input type="file" class="file-input">
+          <input type="file" class="file-input" />
           <span class="upload-span">+ Add photo</span>
         </div>
         <div class="submit-div">
-          <input type="submit" class="input-submit" value="send">
+          <input type="submit" class="input-submit" value="send" />
         </div>
       </form>
     </div>
     <div class="suggestion-answer">
       <div class="form-contents">
-          <div class="form-icon">
-            <i class="fa fa-check"></i>
+        <div class="form-icon">
+          <i class="fa fa-check"></i>
+        </div>
+        <div class="form-text">
+          Müraciətiniz göndərildi. Təşəkkür edirik.
+        </div>
+        <a href="">
+          <div class="close-icon">
+            <i class="fa fa-times"></i>
           </div>
-          <div class="form-text">
-            Müraciətiniz göndərildi.
-Təşəkkür edirik.
-          </div>
-          <a href="">
-            <div class="close-icon">
-                <i class="fa fa-times"></i>
-            </div>
-          </a>
+        </a>
       </div>
     </div>
   </div>
