--- a/src/footer.html
+++ b/src/footer.html
@@ -43,7 +43,7 @@
         <ul class="footer-item-links">
           <li><a href="#">Tərəfdaş ol</a></li>
           <li><a href="#">İnvestorlara</a></li>
-          <li><a href="#">Tərəfdaşlar</a></li>
+          <li><a href="partners.html">Tərəfdaşlar</a></li>
           <li><a href="#">Yer Təklif et</a></li>
           <li><a href="#">Beynəlxalq Əlaqələr</a></li>
           <li><a href="#">Bütün</a></li>
@@ -90,7 +90,7 @@
 
         <ul class="footer-item-links">
           <li><a href="about.html">Şirkət Haqqında</a></li>
-          <li><a href="#">Uğurlar / Sertifikatlar</a></li>
+          <li><a href="certificates.html">Uğurlar / Sertifikatlar</a></li>
           <li><a href="company-head.html">Şirkət Rəhbərinin Müraciəti</a></li>
           <li><a href="big-master.html">Böyük Usta</a></li>
         </ul>
@@ -98,8 +98,8 @@
       <div class="footer-item">
         <div class="footer-item-title">Media Mərkəzi</div>
         <ul class="footer-item-links pnb">
-          <li><a href="#">Xəbərlər</a></li>
-          <li><a href="#">KİV üçün</a></li>
+          <li><a href="news.html">Xəbərlər</a></li>
+          <li><a href="mass-media-1.html">KİV üçün</a></li>
         </ul>
       </div>
       <div class="footer-item">
@@ -118,8 +118,7 @@
   <div class="maskot"><img src="img/drawable-mdpi/3_2_x.png" alt="" /></div>
 </footer>
 <script
-src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
 crossorigin="anonymous"
 ></script>
 <script
@@ -127,6 +126,7 @@ src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
 crossorigin="anonymous"
 ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js"></script>
 <script
 src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
@@ -135,6 +135,7 @@ crossorigin="anonymous"
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjx4YG7E7thIRo6L6wnhcATgWXf8ldHOc&callback=initMap">
 </script>
+<script src="js/jquery.fancybox.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/image_zoom.js"></script>
 <script src="js/app.min.js"></script>
