--- a/src/furnitures.html
+++ b/src/furnitures.html
@@ -1428,7 +1428,7 @@
             </div>
           </div>
         </div>
-        <div id="pagination">
+        <div class="pagination">
           <div class="sub-pagination">
             <a class="pagination-link" aria-label="Previous" href="#">
               <span aria-hidden="true">
@@ -1446,7 +1446,7 @@
                 </svg>
               </span>
             </a>
-            <ul class="pagination">
+            <ul class="pagination-ul">
               <li class="pagination-item">
                 <a class="pagination-link" href="#">1</a>
               </li>
@@ -1457,10 +1457,7 @@
                 <a class="pagination-link" href="#">3</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link" href="#">4</a>
-              </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">5</a>
+                <a class="pagination-link" href="#">...</a>
               </li>
             </ul>
             <a class="pagination-link" aria-label="Next" href="#">
