--- a/src/big-master.html
+++ b/src/big-master.html
@@ -17,15 +17,8 @@
   </div>
   <div class="new-container">
     <h3>Böyük Usta</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
-    </div>
-    <img src="img/big-master.png" alt="" />
+    @include('./slider-navbar.html')
+    <img class="img-class" src="img/big-master.png" alt="" />
     <p>
       Günlərin bir günündə böyük məmləkətin ədalətli şahı əyalətləri gəzməyə
       çıxır. O, insanlarla görüşür, onların həyatı və çətinlikləri ilə yaxından
