--- a/src/certificates.html
+++ b/src/certificates.html
@@ -17,13 +17,8 @@
   </div>
   <div class="certifiates-container">
     <h3>Uğurlar / Sertifikatlar</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item">
-        <a href="company-head.html">Şirkət Rəhbərinin Müraciəti</a>
-      </div>
-      <div class="item"><a href="big-master.html">Böyük Usta</a></div>
-      <div class="item"><a href="about.html">Şirkət Haqqında</a></div>
+    <div class="about-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="certificate-items">
       <div class="certificate-item">
