--- a/src/footer.html
+++ b/src/footer.html
@@ -30,7 +30,7 @@
           <li><a href="#">Müştəri davranış qaydaları</a></li>
           <li><a href="#">Müştəri hüquqları</a></li>
           <li><a href="#">Çatdırılma və ödəniş</a></li>
-          <li><a href="#">Terminalogiya</a></li>
+          <li><a href="terminology.html">Terminalogiya</a></li>
           <li><a href="#">Zəmanət şərtləri</a></li>
           <li><a href="#">Tez-tez verilən suallar</a></li>
         </ul>
@@ -105,8 +105,8 @@
       <div class="footer-item">
         <ul class="footer-item-links">
           <li><a class="footer-item-link" href="#">Mebel Bloq</a></li>
-          <li><a class="footer-item-link" href="#">Vakansiyalar</a></li>
-          <li><a class="footer-item-link" href="#">Əlaqə</a></li>
+          <li><a class="footer-item-link" href="vacancies.html">Vakansiyalar</a></li>
+          <li><a class="footer-item-link" href="contact.html">Əlaqə</a></li>
         </ul>
       </div>
     </div>
