--- a/src/mass-media-1.html
+++ b/src/mass-media-1.html
@@ -16,15 +16,12 @@
     </ul>
   </div>
   <div class="media-container-1">
-    
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="mass-media-1.html">Şirkətin loqosu</a></div>
-      <div class="item"><a href="mass-media-2.html">Şirkətdən görüntülər</a></div>
-      <div class="item"><a href="mass-media-3.html">Rəhbərin görüntüləri</a></div>
-      <div class="item"><a href="mass-media-4.html">Reklam çarxları</a></div>
+    <h3>Kiv Üçün</h3>
+    <div class="media-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="row margin-0">
-      <div class="col-md-3 col-sm-4 col-6 pl-0">
+      <div class="col-md-3 col-sm-4 col-12 pl-0">
         <div class="logo-item">
           <div class="logo-item-img">
             <img src="img/gardashlar-logo.png" alt="" />
@@ -35,7 +32,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-4 col-6 pl-0">
+      <div class="col-md-3 col-sm-4 col-12 pl-0">
         <div class="logo-item">
           <div class="logo-item-img">
             <img src="img/gardashlar-logo.png" alt="" />
@@ -46,7 +43,40 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-4 col-6 pl-0">
+      <div class="col-md-3 col-sm-4 col-12 pl-0">
+        <div class="logo-item">
+          <div class="logo-item-img">
+            <img src="img/gardashlar-logo.png" alt="" />
+          </div>
+          <div class="logo-item-btns">
+            <button><img src="img/118247.png" alt="" /> EPS</button>
+            <button><img src="img/118247.png" alt="" /> PNG</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-12 pl-0">
+        <div class="logo-item">
+          <div class="logo-item-img">
+            <img src="img/gardashlar-logo.png" alt="" />
+          </div>
+          <div class="logo-item-btns">
+            <button><img src="img/118247.png" alt="" /> EPS</button>
+            <button><img src="img/118247.png" alt="" /> PNG</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-12 pl-0">
+        <div class="logo-item">
+          <div class="logo-item-img">
+            <img src="img/gardashlar-logo.png" alt="" />
+          </div>
+          <div class="logo-item-btns">
+            <button><img src="img/118247.png" alt="" /> EPS</button>
+            <button><img src="img/118247.png" alt="" /> PNG</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-4 col-12 pl-0">
         <div class="logo-item">
           <div class="logo-item-img">
             <img src="img/gardashlar-logo.png" alt="" />
