--- a/src/mass-media-2.html
+++ b/src/mass-media-2.html
@@ -17,22 +17,37 @@
   </div>
   <div class="my-container">
     <h3>KİV üçün</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="mass-media-1.html">Şirkətin loqosu</a></div>
-      <div class="item">
-        <a href="mass-media-2.html">Şirkətdən görüntülər</a>
-      </div>
-      <div class="item">
-        <a href="mass-media-3.html">Rəhbərin görüntüləri</a>
-      </div>
-      <div class="item"><a href="mass-media-4.html">Reklam çarxları</a></div>
+    <div class="media-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="company-images">
       <div class="company-image">
         <img class="company-img-itm" src="img/company-img.png" alt="" />
-        <a class="download-btn" href="#"
-          ><img src="img/download.png" alt="" /><span>download</span>
-        </a>
+        <button class="download-button">
+          <img src="img/download.png" alt="" />
+          <div class="downloaded">&nbsp;&nbsp;download</div>
+        </button>
+      </div>
+      <div class="company-image">
+        <img class="company-img-itm" src="img/company-img.png" alt="" />
+        <button class="download-button">
+          <img src="img/download.png" alt="" />
+          <div class="downloaded">&nbsp;&nbsp;download</div>
+        </button>
+      </div>
+      <div class="company-image">
+        <img class="company-img-itm" src="img/company-img.png" alt="" />
+        <button class="download-button">
+          <img src="img/download.png" alt="" />
+          <div class="downloaded">&nbsp;&nbsp;download</div>
+        </button>
+      </div>
+      <div class="company-image">
+        <img class="company-img-itm" src="img/company-img.png" alt="" />
+        <button class="download-button">
+          <img src="img/download.png" alt="" />
+          <div class="downloaded">&nbsp;&nbsp;download</div>
+        </button>
       </div>
     </div>
     <div class="pagination">
