--- a/src/mass-media-4.html
+++ b/src/mass-media-4.html
@@ -17,15 +17,8 @@
   </div>
   <div class="my-container">
     <h3>KİV üçün</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="mass-media-1.html">Şirkətin loqosu</a></div>
-      <div class="item">
-        <a href="mass-media-2.html">Şirkətdən görüntülər</a>
-      </div>
-      <div class="item">
-        <a href="mass-media-3.html">Rəhbərin görüntüləri</a>
-      </div>
-      <div class="item"><a href="mass-media-4.html">Reklam çarxları</a></div>
+    <div class="media-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="company-images">
       <div class="company-image">
