--- a/src/master-service.html
+++ b/src/master-service.html
@@ -21,14 +21,7 @@
   <div class="big-section">
     <div class="new-container">
       <h3>Usta xidməti</h3>
-      <div class="owl-carousel owl-theme">
-        <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-        <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-        <div class="item"><a href="#">Böyük Usta</a></div>
-        <div class="item"><a href="#">Şirkət Haqqında</a></div>
-        <div class="item"><a href="#">Böyük Usta</a></div>
-        <div class="item"><a href="#">Şirkət Haqqında</a></div>
-      </div>
+      @include('./slider-navbar.html')
       <div class="panel-body">
         Bilirik, bilirik Siz də bir çox mebel ustalarının evinizdə gördüyü yanlış işlərin nəticəsindən sonradan əmələ
         gələn problemlərdən narazısınız. Bu məsələ bizi də narahat etdiyi üçün istəmirik ki, bu məsələlərdə bizim də
