--- a/src/partners.html
+++ b/src/partners.html
@@ -17,13 +17,8 @@
   </div>
   <div class="partners-container">
     <h3>Tərəfdaşlar</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Tərəfdaşlar</a></div>
-      <div class="item"><a href="#">İnvestorlara</a></div>
-      <div class="item"><a href="#">Tərəfdaş ol</a></div>
-      <div class="item"><a href="#">Yer Təklif et</a></div>
-      <div class="item"><a href="#">Beynəlxalq Əlaqələr</a></div>
-      <div class="item"><a href="#">Bütün</a></div>
+    <div class="media-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="row margin-0">
       <div class="col-md-3 col-sm-4 col-6 pl-0">
