--- a/src/project-item.html
+++ b/src/project-item.html
@@ -1,11 +1,11 @@
 <div class="project-item">
   <div class="project-item-img">
-    <a href="#">
+    <a href="project-single.html">
       <img src="img/news-internal.png" alt="" />
     </a>
   </div>
   <div class="project-item-name">
     <h3>Project Name</h3>
-    <a href="#">see more <img src="img/arrow-right.png" alt=""/></a>
+    <a href="project-single.html">see more <img src="img/arrow-right.png" alt=""/></a>
   </div>
 </div>
