--- a/src/projects.html
+++ b/src/projects.html
@@ -20,12 +20,8 @@
       <span>10 PROJECTS</span>
     </div>
     <h3>Özəl Layihələr</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Usta xidməti</a></div>
-      <div class="item"><a href="#">Özəl sifarişlər</a></div>
-      <div class="item"><a href="#">Özəl layihələr</a></div>
-      <div class="item"><a href="#">Konsultasiya xidməti</a></div>
-      <div class="item"><a href="#">Planlama xidməti</a></div>
+    <div class="about-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <p>
       Qardaşlar mebel şirkəti olaraq istənilən layihələrin kompleks həllini və
