--- a/src/suggestion.html
+++ b/src/suggestion.html
@@ -18,13 +18,8 @@
   </div>
   <div class="new-container">
     <h3>Yeri təklifi anketi</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
+    <div class="about-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="panel-body">
       Mebel seçimi ciddi araşdırma və diqqət tələb edir. İlk baxışdan bu seçim
