--- a/src/about.html
+++ b/src/about.html
@@ -17,11 +17,8 @@
   </div>
   <div class="new-container">
     <h3>Şirkət haqqında</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
+    <div class="about-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <p>
       Geniş çeşidli mebel istehsalı bizim əsas fəaliyyət sahəmizdir. Biz
