--- a/src/company-head.html
+++ b/src/company-head.html
@@ -17,13 +17,8 @@
   </div>
   <div class="new-container">
     <h3>Şirkət Rəhbərinin Müraciəti</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
+    <div class="about-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <p>
       Qardaşlar mebel Azərbaycanda mebel sektorunu inkişaf etdirmək və insan
@@ -36,7 +31,7 @@
       iqtisadiyyatına qatdığı dəyər qeyri-neft sektorunun inkişaf potensialına
       da ciddi təsir etməkdədir.
     </p>
-    <img src="img/company-head.png" alt="" />
+    <img class="img-class" src="img/company-head.png" alt="" />
     <h5>ƏLİ MİRZƏYEV</h5>
     <h5>Qardaşlar mebel MMC-nin direktoru</h5>
     <p>
