--- a/src/special-orders.html
+++ b/src/special-orders.html
@@ -21,13 +21,8 @@
   <div class="big-section">
     <div class="new-container">
       <h3>Özəl sifarişlər</h3>
-      <div class="owl-carousel owl-theme">
-        <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-        <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-        <div class="item"><a href="#">Böyük Usta</a></div>
-        <div class="item"><a href="#">Şirkət Haqqında</a></div>
-        <div class="item"><a href="#">Böyük Usta</a></div>
-        <div class="item"><a href="#">Şirkət Haqqında</a></div>
+      <div class="about-slider-nav">
+        @include('./slider-navbar.html')
       </div>
       <div class="panel-body">
         Bilirik, bilirik Siz də bir çox mebel ustalarının evinizdə gördüyü yanlış işlərin nəticəsindən sonradan əmələ
