--- a/src/terminology.html
+++ b/src/terminology.html
@@ -18,13 +18,8 @@
   </div>
   <div class="new-container">
     <h3>Terminologiya</h3>
-    <div class="owl-carousel owl-theme">
-      <div class="item"><a href="#">Uğurlar / Sertifikatlar</a></div>
-      <div class="item"><a href="#">Şirkət Rəhbərinin Müraciəti</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
-      <div class="item"><a href="#">Böyük Usta</a></div>
-      <div class="item"><a href="#">Şirkət Haqqında</a></div>
+    <div class="about-slider-nav">
+      @include('./slider-navbar.html')
     </div>
     <div class="letters">
         <div><a class="active" href="javascript: void(0)">A</a></div>
